--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "solidity-broker",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "",
   "dependencies": {
-    "truffle": "^4.0.5",
-    "zeppelin-solidity": "^1.6.0"
+    "truffle": "~4.0",
+    "zeppelin-solidity": "~1.6"
   },
   "devDependencies": {},
   "scripts": {
